# ChangeLog for dev-libs/opensc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.118 2011/12/05 16:13:09 vapier Exp $

*opensc-0.12.2-r1 (28 May 2012)

  28 May 2012; Francisco Blas Izquierdo Riera (klondike)
  +opensc-0.12.2-r1.ebuild, +files/opensc-0.12.2-dl.patch,
  +files/opensc-0.12.2-parallelinstall.patch:
  Updated -r1 with the dnie patch

  25 Jan 2012; Francisco Blas Izquierdo Riera (klondike)
  +files/opensc-0.12.1-crossbuild.patch, +opensc-0.12.2.ebuild, +metadata.xml:
  Adding support for the spanish DNIe

  05 Dec 2011; Mike Frysinger <vapier@gentoo.org> opensc-0.12.2.ebuild:
  Drop local usex now that it is in eutils.eclass.

  14 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org> opensc-0.12.2.ebuild:
  Remove stupid static-libs USE flag as the package should _not_ install static
  libraries at all.

*opensc-0.12.2 (13 Sep 2011)

  13 Sep 2011; Mike Frysinger <vapier@gentoo.org> +opensc-0.12.2.ebuild,
  metadata.xml:
  Version bump. Add USE=libtool to control the libltdl dep (and prefer
  libdl/dlopen), and add USE=static-libs.

*opensc-0.12.1 (07 Jul 2011)

  07 Jul 2011; Dane Smith <c1pher@gentoo.org> +opensc-0.12.1.ebuild,
  +files/opensc-0.12.1-crossbuild.patch:
  Version bump wrt bug 374309. Adjusted the existing crossbuild patch
  for the new version. Removed no longer needed || die.

  03 Jul 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  opensc-0.12.0-r2.ebuild, +files/opensc-0.12.0-crossbuild.patch:
  Add a patch to fix some corner cases in build, where the just-built opensc
  tools used the old library.

*opensc-0.12.0-r2 (18 Apr 2011)

  18 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -opensc-0.12.0-r1.ebuild, +opensc-0.12.0-r2.ebuild, metadata.xml:
  Revision bump: when both pcsc-lite and openct are disabled, build the dynamic
  CT-API interface only rather than error out. This is useful if you only care