@@ -1,9 +1,8 @@
-AUX opensc-0.12.1-crossbuild.patch 1839 RMD160 21c3ce0de0c293ed76c003bf8327908329e43f9f SHA1 d5e730f5c7f64f1e6aa137edef726901059fb183 SHA256 dd1f76f60d6223fc86ee80f500b89ffc3dfebffac04ef999f58df17d90b1bedb
-AUX opensc-0.12.2-dl.patch 1264 RMD160 48acbd83c22bf5f4fcd199ea3b292f84fd798886 SHA1 68434844b65452963d597dfdc82a62a7a8275cb6 SHA256 6d081c0c598b0999fad501ba97f293156d5a64928d769891c18cb6783e01da71
-AUX opensc-0.12.2-parallelinstall.patch 2132 RMD160 4b5401fa9840dca5fc4f78df3e3a6444c39de1f2 SHA1 2f0bc80cf8c5b8d3524f119a65d2e23be3bdcdcd SHA256 bb7b632fe4ef164f09cdff1e02598711bf14207a0e3e428a1b9d2e46715b0495
-DIST opensc-0.12.2-opendnie.patch.bz2 47945 RMD160 7aba5e64d90c39a0ab3569013701ed113927b97c SHA1 72c7590118ad3da8dfccd12b83601857be8221b1 SHA256 9a931d71dee7e2bd295fdfad38696bbd549b35e60b84fe79d68fe1995411fef7
-DIST opensc-0.12.2.tar.gz 1738553 RMD160 45504135db05fd404a357ebd8bea047c5c8604dc SHA1 8c34be52eb94025eb181c02b466223901bef744c SHA256 50e7371c0f45a3ed887098b712554905e3ef639d4dfca5ac90b8af5f69f1e675
-EBUILD opensc-0.12.2-r1.ebuild 2370 RMD160 651bb640a27b71e392180aadbd44dc33a1e55191 SHA1 eb89abf30770473f3ae30a8a1a38c5f237996a63 SHA256 715107461ae4e4b9ee3714909543d544935b1bb046cf39c66b22535790ace708
-EBUILD opensc-0.12.2.ebuild 2217 RMD160 d9a0724bf97f184cf75ea9833bb4d6b5d0bf06cf SHA1 ceddceb73500a093593c570ec8e420f3a80930b2 SHA256 71e2b8cbe837902df12d2d98222591516658e7b708455df791aae0bc22a61b84
-MISC ChangeLog 17995 RMD160 8d097abea79cdfae38b50358151dc9e7aa89175a SHA1 f9fa96ac872178113686e4d061f72ce25e7c3597 SHA256 a78d4ff359de1c4722666555da44622f1e988caeccb7b4fc01658481c42f74a2
-MISC metadata.xml 1599 RMD160 5a1f7c31a052fe8b501c1b6073a87611d5e21db2 SHA1 a673df85ce5a4e00c20ba035aea349fc9edcd9db SHA256 f03dfad5eb82d10ddbde88ade8f7450d08a5fd1b984186c74ba369c9db403826
+AUX opensc-0.12.1-crossbuild.patch 1839 SHA256 dd1f76f60d6223fc86ee80f500b89ffc3dfebffac04ef999f58df17d90b1bedb SHA512 92f3a9c396082e7ab133c3eedd2a672d1de716ae420f255efa1a5b81877cf598d971fc5f4f32ffe5c89b8c447657c1845528b5932d520c435eb440d077805fda WHIRLPOOL 118ee84e436c37b1307c0e74245a325c75504357363877db85085179707ff035fae6cd02755d58db12d3eef31ebcfbc0bb08994c0f814ea11d1bc787a69ad9c7
+AUX opensc-0.12.2-dl.patch 1264 SHA256 6d081c0c598b0999fad501ba97f293156d5a64928d769891c18cb6783e01da71 SHA512 90c1cd6e7fdb03a26ad031bd1b7bd7490d9cd890d3862d39b6929cea5ded393a43e86e2e364f492346d049b6d9eb58e6868561d2dcca4314084ef112bee43a16 WHIRLPOOL 3fab99f52ee034ebdb841c4dc30ca0b115f0b975b48150a49a4b89c38a2426287bc10b6bec9d105dac144d124acfc070de6e281c6ddde95f31d95bbd38c25d5e
+AUX opensc-0.12.2-parallelinstall.patch 2132 SHA256 bb7b632fe4ef164f09cdff1e02598711bf14207a0e3e428a1b9d2e46715b0495 SHA512 025484837068908c9a0a5efa7b79d389607be2a264a726dc152f9bc592cd34cd12306057d66861df308ac61aa0c30985c962596efa5076283b47152509824c01 WHIRLPOOL d7eb4593fb7f8ad6507eb8b1ba7dc2a62d3b7babba36f2224d6f6b7af1829aba64d74696de6297d6661a23a54640ea3e513c2b5f22d2b6770b92e08abe2f6a7e
+DIST opensc-0.12.2-opendnie.patch.bz2 47945 SHA256 9a931d71dee7e2bd295fdfad38696bbd549b35e60b84fe79d68fe1995411fef7 SHA512 8e1b8595d8a8e5a63b1318092bf5b77797f9e4aba7ac4acc98a01c1597db1bb413f031f2ace307558edd161db09c3f89e35066b439881d8bd7afbbc0d0d2e85b WHIRLPOOL 191e40464e8ba89c8b6625b83be31f124674415970e3c7ac35e690dec54871d04209047891ff0439a647b0929939e3424ca508e9276197385c0f4a755cd6c209
+DIST opensc-0.12.2.tar.gz 1738553 SHA256 50e7371c0f45a3ed887098b712554905e3ef639d4dfca5ac90b8af5f69f1e675 SHA512 544971f2c79723f618806c7043f0f1ffc25332752cbcaec97ffb1c99f9a2dff2237a6e5f5e020a4b9878921fec3a5234ca7e4fe9c8175c3f6142b169fcc65334 WHIRLPOOL 4969811d68d72e82c3a2b0297d5ff9aaca083b6ef8e66223d4385dce35cd9560cdda7cca8ccd38b52eb55465dbd6f8704485778b21d2a88bb548a5bbd87071e2
+EBUILD opensc-0.12.2-r2.ebuild 2280 SHA256 eb99fc5a24b47014d169f9ec14b738c937a1f2e2813eb8762dc3d531f65c76a9 SHA512 9a716e8120a9f28fc4dba7db22a503e774f61bb74932417ab6f5328ced9fa1c7fba8729206537f9077706bd1e005bda1331a7634a8b38e69befad2c99ae778e8 WHIRLPOOL be6aa45b664f546cd654856182d2f151abcf64c541b4bbcd4daeb01fb48312216e34800d87284c866d4791f547e66d1449c0ebae4c015387f1ee8988496bf361
+MISC ChangeLog 18188 SHA256 cf5e37d3d33100a4e04c8793ad8040fdeb9dc4cc7e2f9e0c51a54bc089774110 SHA512 d27fc30095246ec3d479445fd1e7211912bbe559a5d22c45ae69302bce9fd18ff60989a821957314f67fa2c05be6d2f1d3c3e6b4d700fc82ffcdbb8082f2c10b WHIRLPOOL abbdb27c852efc9b78f8d7796330e8dd9d485adb08855c17e159f31c645c81ac0da6bedbd0db55df1386869b21c8ca305c20472964eb6317686a994333dc84d9
+MISC metadata.xml 1599 SHA256 f03dfad5eb82d10ddbde88ade8f7450d08a5fd1b984186c74ba369c9db403826 SHA512 362dd2562538f99c713e9f171baaebbd699d859f40a0e97a7342caa307f751c379921c1af4b77876168db2bfd69bf7e97897213ee9bf0752a3ac4edde651b654 WHIRLPOOL 8aaa7ee574c199b12db3fb938237f0099eb01fed16d59b6be0787d6ea972384c1735b45497b98e16d5ee717d76038255649d2430b0ac5a4e7d9f943385ba67b2
