@@ -1,8 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/opensc-0.12.2.ebuild,v 1.3 2011/12/05 16:13:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/opensc-0.12.2-r2.ebuild,v 1.5 2012/09/12 00:34:08 jer Exp $
 
-EAPI="4"
+EAPI=4
 
 inherit eutils autotools
 
@@ -16,7 +16,7 @@ SRC_URI="http://www.opensc-project.org/files/${PN}/${P}.tar.gz
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+KEYWORDS="~alpha amd64 arm hppa ~ia64 ~m68k ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
 IUSE="doc dnie libtool +pcsc-lite openct readline ssl zlib"
 
 RDEPEND="libtool? ( sys-devel/libtool )
@@ -26,7 +26,7 @@ RDEPEND="libtool? ( sys-devel/libtool )
 	openct? ( >=dev-libs/openct-0.5.0 )
 	pcsc-lite? ( >=sys-apps/pcsc-lite-1.3.0 )"
 DEPEND="${RDEPEND}
-	dev-util/pkgconfig
+	virtual/pkgconfig
 	app-text/docbook-xsl-stylesheets
 	dev-libs/libxslt"
 
@@ -37,6 +37,8 @@ REQUIRED_USE="
 src_prepare() {
 	epatch "${FILESDIR}"/${PN}-0.12.1-crossbuild.patch
 	use dnie && epatch "${WORKDIR}"/${P}-opendnie.patch
+	epatch "${FILESDIR}"/${P}-parallelinstall.patch
+	epatch "${FILESDIR}"/${P}-dl.patch
 	eautoreconf
 }
 
@@ -60,18 +62,17 @@ src_configure() {
 
 	econf \
 		--docdir="/usr/share/doc/${PF}" \
-		--htmldir="/usr/share/doc/${PF}/html" \
+		--htmldir='$(docdir)/html' \
 		--disable-static \
 		$(use_enable doc) \
 		$(use_enable openct) \
 		$(use_enable readline) \
 		$(use_enable zlib) \
+		$(use_enable ssl openssl) \
 		${myconf}
 }
 
 src_install() {
-	emake DESTDIR="${D}" install
-	find "${D}" -name '*.la' -delete
-
-	dodoc ChangeLog
+	default
+	find "${ED}"/usr -name '*.la' -delete
 }
