@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.118 2011/12/05 16:13:09 vapier Exp $
 
+*opensc-0.12.2-r2 (27 Sep 2012)
+
+  27 Sep 2012; Francisco Blas Izquierdo Riera (klondike) -opensc-0.12.2.ebuild,
+  -opensc-0.12.2-r1.ebuild, +opensc-0.12.2-r2.ebuild:
+  Updating opensc to -r2
+
 *opensc-0.12.2-r1 (28 May 2012)
 
   28 May 2012; Francisco Blas Izquierdo Riera (klondike)
